[gd_scene load_steps=10 format=3 uid="uid://blrosr0libc5j"]

[ext_resource type="Texture2D" uid="uid://cwatxac2j832n" path="res://Assets/Sprites/Templates/Front.png" id="1_jmdrr"]
[ext_resource type="Script" path="res://Scripts/card.gd" id="1_q78fy"]
[ext_resource type="Texture2D" uid="uid://c47gm488c7vjf" path="res://Assets/Sprites/Templates/Front BG.png" id="1_rgnd8"]
[ext_resource type="FontFile" uid="uid://qm513m47rjve" path="res://Assets/Fonts/8_bit_hud/8-bit-hud.ttf" id="3_mhy7l"]
[ext_resource type="Texture2D" uid="uid://blyup1pq5upvl" path="res://Assets/Sprites/Icons/Gold Coins.png" id="5_qmux8"]
[ext_resource type="Texture2D" uid="uid://bv6t5snecp0ln" path="res://Assets/Sprites/Templates/Description BG.png" id="6_6vvrd"]
[ext_resource type="Texture2D" uid="uid://n4fd05a28si2" path="res://Assets/Sprites/Templates/Description Marquee.png" id="7_0njmf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llc0d"]
size = Vector2(96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_miiru"]
atlas = ExtResource("1_jmdrr")
region = Rect2(0, 0, 96, 128)

[node name="Card" type="Node2D"]
visible = false
script = ExtResource("1_q78fy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_llc0d")

[node name="Front BG" type="Sprite2D" parent="."]
modulate = Color(0.18, 0.25, 0.325, 1)
texture_filter = 1
position = Vector2(3.8147e-06, 0)
texture = ExtResource("1_rgnd8")

[node name="Front Marquee" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_miiru")

[node name="Name Display" type="Node2D" parent="."]
position = Vector2(-1, 1)

[node name="Card Name" type="Label" parent="Name Display"]
texture_filter = 1
offset_left = -40.0
offset_top = -60.0
offset_right = 42.0
offset_bottom = -51.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_fonts/font = ExtResource("3_mhy7l")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
vertical_alignment = 1

[node name="Card Image" type="Node2D" parent="."]

[node name="Card Avatar" type="Sprite2D" parent="Card Image"]
texture_filter = 1
position = Vector2(0, -17)
scale = Vector2(2.5, 2.5)
region_rect = Rect2(531, 1009, 43, 47)

[node name="Description Display" type="Node2D" parent="."]
position = Vector2(0, -1)

[node name="Description BG" type="Sprite2D" parent="Description Display"]
self_modulate = Color(0.180392, 0.25098, 0.32549, 1)
texture_filter = 1
position = Vector2(0, 38)
texture = ExtResource("6_6vvrd")

[node name="Description Marquee" type="Sprite2D" parent="Description Display"]
texture_filter = 1
position = Vector2(0, 38)
texture = ExtResource("7_0njmf")

[node name="Description" type="Label" parent="Description Display"]
texture_filter = 1
offset_left = -39.0
offset_top = 22.0
offset_right = 39.0
offset_bottom = 34.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_mhy7l")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 1

[node name="Cost Display" type="Node2D" parent="."]
position = Vector2(-7, 84)

[node name="Cost Icon" type="Sprite2D" parent="Cost Display"]
texture_filter = 1
position = Vector2(5.82645e-13, -41)
rotation = -6.28319
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_qmux8")

[node name="Cost" type="Label" parent="Cost Display"]
texture_filter = 1
offset_left = 12.0
offset_top = -42.0
offset_right = 19.0
offset_bottom = -34.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_mhy7l")
theme_override_font_sizes/font_size = 5
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
